# brickflow

./: .coveragerc  .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  prospector.yaml  pyproject.toml  setup.py  setup.py.bck  sitemap.xml
.github/workflows/: onpush.yml
api/cli/: index.html
api/compute/: index.html
api/context/: index.html
api/misc/: index.html
api/project/: index.html
api/task/: index.html
api/workflow/: index.html
brickflow/: __init__.py
brickflow/adapters/: __init__.py  airflow_1_10.py
brickflow/cli/: __init__.py  configure.py  entrypoint.template  gitignore_template.txt
brickflow/context/: __init__.py  context.py
brickflow/engine/: __init__.py  aspects.py  compute.py  context.py  project.py  task.py  utils.py  workflow.py
brickflow/tf/: __init__.py
brickflow/tf/databricks/_jsii/: databricks_databricks@0.0.0.jsii.tgz
cli/reference/: index.html
docs/: index.md
docs/api/: compute.md  context.md  task.md
docs/cli/: reference.md
examples/basic-00/: index.html
examples/basic-01/: index.html
examples/basic-02/: index.html
examples/basic-03/: index.html
examples/basic-04/: index.html
faq/faq/: index.html
getting-started/airflow-concepts/: index.html
getting-started/databricks-workflow-concepts/: index.html
getting-started/environment-variables/: index.html
getting-started/installation/: index.html
getting-started/projects/: index.html
getting-started/tasks/: index.html
getting-started/workflows/: index.html
guides/airflow-operators/: index.html
guides/dag-to-workflows/: index.html
guides/dev-loop/: index.html
guides/dlt-pipelines/: index.html
guides/setup/: index.html
guides/sql-warehouses/: index.html
guides/submitting-sql-files/: index.html
sample_workflows/: sample_workflow_1.py  sample_workflow_2.py
sdk/engine/: __init__.py  compute.py  context.py  project.py  task.py  utils.py  workflow.py
sdk/tf/databricks/_jsii/: __init__.py
search/: search_index.json
tests/cli/: test_cli.py
tests/context/: test_context.py
tests/engine/: sample_workflow.py  test_compute.py  test_engine.py  test_project.py  test_task.py  test_workflow.py
