[tool.poetry]
name = "brickflow"
version = "0.0.1-pre.42+08bd54b"
description = "Deploy scalable workflows to databricks."
authors = ["stikkireddy <sri.tikkireddy@databricks.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stikkireddy/brickflow"
repository = "https://github.com/stikkireddy/brickflow"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = ">=3.6"
networkx = ">=2"

cdktf = {version = ">=0.12.3",  optional = true }


[tool.poetry.extras]
deploy = ["cdktf"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
coverage = "^6.5.0"
black = "^22.8.0"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
bump = true
style = "semver"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        # omit anything in a .local directory anywhere
        '*/.local/*',
        '**',
        'tests/*',
        '*/tests/*',
        # omit anything in a .venv directory anywhere
        '.venv/*',
        "*/site-packages/*"
    ]

    [tool.coverage.report]
    skip_empty = true

