[tool.poetry]
name = "brickflow"
version = "0.0.1-pre.42+08bd54b"
description = "Deploy scalable workflows to databricks."
authors = ["stikkireddy <sri.tikkireddy@databricks.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stikkireddy/brickflow"
repository = "https://github.com/stikkireddy/brickflow"
include = [
    "LICENSE",
    "entrypoint.template",
    "gitignore_template.txt",
]
exclude = ["sample_workflows", "tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | brickflow/tf
  | venv
  | brickflow.egg-info
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = ">=3.6"
networkx = ">=2"

cdktf = {version = ">=0.12.3",  optional = true }
pendulum = "^2.1.2"
Jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.scripts]
bf = "brickflow.cli:cli"
brickflow = "brickflow.cli:cli"

[tool.poetry.extras]
deploy = ["cdktf"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
coverage = "^6.5.0"
black = "^22.8.0"
prospector = "^1.7.7"
cdktf = ">=0.12.3"
mypy = "^0.982"
mkdocs = "^1.4.0"
mkdocs-click = "^0.8.0"
mkdocs-material = ">=8.5,<9.0.0"
mdx-include = ">=1.4.1,<2.0.0"
mkdocs-markdownextradata-plugin = ">=0.1.7,<0.3.0"
mkdocstrings = {version = "^0.19.0", extras=["python"]}
mkdocs-autorefs = "^0.4.1"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = true
style = "semver"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        # omit anything in a .local directory anywhere
        '*/.local/*',
        '**',
        'tests/*',
        '*/tests/*',
        # omit anything in a .venv directory anywhere
        '.venv/*',
        "*/site-packages/*"
    ]

    [tool.coverage.report]
    skip_empty = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = [
    "brickflow/context/*.py",
    "brickflow/cli/*.py",
    "brickflow/hints/*.py",
    "brickflow/engine/*.py",
]
follow_imports = "skip"